--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import "https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap";
+@import url(https://fonts.googleapis.com/css?family=Montserrat:300);
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +6,7 @@
 }
 html {
   font-size: 10px;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   scroll-behavior: smooth;
 }
 a {
@@ -25,7 +25,7 @@ img {
   object-fit: cover;
 }
 p {
-  color: black;
+  color: #000;
   font-size: 1.4rem;
   margin-top: 5px;
   line-height: 2.5rem;
@@ -35,22 +35,21 @@ p {
 .section-title {
   font-size: 4rem;
   font-weight: 300;
-  color: black;
+  color: #000;
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   text-align: center;
 }
 .section-title span {
-  color: crimson;
+  color: #dc143c;
 }
-
 .cta {
   display: inline-block;
   padding: 10px 30px;
-  color: white;
+  color: #fff;
   background-color: transparent;
-  border: 2px solid crimson;
+  border: 2px solid #dc143c;
   font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -59,15 +58,14 @@ p {
   transition-property: background-color, color;
 }
 .cta:hover {
-  color: white;
-  background-color: crimson;
+  color: #fff;
+  background-color: #dc143c;
 }
 .title-name h1 {
   font-size: 3rem;
   text-transform: uppercase;
-  color: white;
+  color: #fff;
 }
-/* Header Section */
 #header {
   position: fixed;
   z-index: 1000;
@@ -78,7 +76,7 @@ p {
 }
 #header .header {
   min-height: 8vh;
-  background-color: black;
+  background-color: #000;
   transition: 0.3s ease background-color;
 }
 #header .nav-bar {
@@ -93,7 +91,7 @@ p {
 #header .nav-list ul {
   list-style: none;
   position: absolute;
-  background-color: black;
+  background-color: #000;
   width: 100vw;
   height: 100vh;
   left: 100%;
@@ -106,15 +104,12 @@ p {
   overflow-x: hidden;
   transition: 0.5s ease left;
 }
-#header .nav-list ul.active {
-  left: 0%;
-}
 #header .nav-list ul a {
   font-size: 2.5rem;
   font-weight: 500;
   letter-spacing: 0.2rem;
   text-decoration: none;
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   padding: 20px;
   display: block;
@@ -125,7 +120,7 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
-  color: black;
+  color: #000;
   font-size: 13rem;
   letter-spacing: 50px;
   z-index: -1;
@@ -136,13 +131,13 @@ p {
   letter-spacing: initial;
 }
 #header .nav-list ul li:hover a {
-  color: crimson;
+  color: #dc143c;
 }
 #header .menu {
   height: 60px;
   width: 60px;
   display: inline-block;
-  border: 3px solid white;
+  border: 3px solid #fff;
   border-radius: 50%;
   position: relative;
   align-items: center;
@@ -152,8 +147,6 @@ p {
   transform: scale(0.8);
   margin-right: 20px;
 }
-/* End Header Section */
-/* Home Section */
 #home {
   background-image: url(bg.jpg);
   background-size: cover;
@@ -168,7 +161,7 @@ p {
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: #000;
   opacity: 0.7;
   z-index: -1;
 }
@@ -203,7 +196,7 @@ p {
   left: 0;
   height: 100%;
   width: 0;
-  background-color: crimson;
+  background-color: #dc143c;
   animation: text_reveal_box 1s ease;
   animation-delay: 0.5s;
 }
@@ -216,8 +209,6 @@ p {
 #home h1:nth-child(3) span {
   animation-delay: 2.5s;
 }
-/* End home Section */
-/* About Section */
 #about .about {
   flex-direction: column-reverse;
   text-align: center;
@@ -242,7 +233,7 @@ p {
   margin-bottom: 20px;
 }
 #about .col-right .cta {
-  color: black;
+  color: #000;
   margin-bottom: 50px;
   padding: 10px 20px;
   font-size: 2rem;
@@ -251,10 +242,8 @@ p {
   height: 100%;
   width: 100%;
   position: relative;
-  border: 10px solid white;
+  border: 10px solid #fff;
 }
-/* End About Section */
-/* Projects section */
 #projects .projects {
   flex-direction: column;
   max-width: 1200px;
@@ -288,8 +277,8 @@ p {
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-  color: white;
+  background-image: linear-gradient(60deg, #29323c 0, #485563 100%);
+  color: #fff;
 }
 #projects .project-info h1 {
   font-size: 4rem;
@@ -301,7 +290,7 @@ p {
   margin-top: 10px;
 }
 #projects .project-info p {
-  color: white;
+  color: #fff;
 }
 #projects .project-img {
   flex-basis: 50%;
@@ -316,7 +305,7 @@ p {
   top: 0;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background-image: linear-gradient(60deg, #29323c 0, #485563 100%);
   opacity: 0.7;
 }
 #projects .project-img img {
@@ -325,8 +314,6 @@ p {
 #projects .project-item:hover .project-img img {
   transform: scale(1.1);
 }
-/* End Projects Section */
-/* Contact Section */
 #contact .contact {
   flex-direction: column;
   max-width: 1200px;
@@ -347,7 +334,6 @@ p {
   flex-direction: column;
   transition: 0.3s ease box-shadow;
 }
-
 #contact .icon {
   width: 70px;
   margin: 0 auto;
@@ -363,8 +349,6 @@ p {
   line-height: 2rem;
   font-weight: 500;
 }
-/*End Contact Section */
-/* Keyframes */
 @keyframes menu_puls {
   0% {
     opacity: 1;
@@ -387,17 +371,15 @@ p {
 }
 @keyframes text_reveal {
   100% {
-    color: white;
+    color: #fff;
   }
 }
 @keyframes text_reveal_name {
   100% {
-    color: crimson;
+    color: #dc143c;
     font-weight: 500;
   }
 }
-/* End Keyframes */
-/* Media Query For Tablet */
 @media only screen and (min-width: 768px) {
   .cta {
     font-size: 2.5rem;
@@ -406,12 +388,9 @@ p {
   h1.section-title {
     font-size: 6rem;
   }
-  /* Home */
   #home h1 {
     font-size: 7rem;
   }
-  /* End Home */
-  /* About */
   #about .about {
     flex-direction: row;
   }
@@ -425,7 +404,7 @@ p {
     top: 34px;
     height: 98%;
     width: 98%;
-    border: 10px solid crimson;
+    border: 10px solid #dc143c;
   }
   #about .col-right {
     text-align: left;
@@ -434,8 +413,6 @@ p {
   #about .col-right h1 {
     text-align: left;
   }
-  /* End About */
-  /* Contact  */
   #contact .contact {
     flex-direction: column;
     padding: 100px 0;
@@ -467,12 +444,8 @@ p {
     text-align: left;
     padding-left: 20px;
   }
-  /* End Contact  */
 }
-/* End Media Query For Tablet */
-/* Media Query For Desktop */
 @media only screen and (min-width: 1200px) {
-  /* Header */
   #header .menu {
     display: none;
   }
@@ -492,5 +465,4 @@ p {
   #header .nav-list ul a:after {
     display: none;
   }
-  /* End Header */
 }
