--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ p {
   overflow-x: hidden;
   transition: 0.5s ease left;
 }
+#header .nav-list ul.active {	
+  left: 0%;	
+}
 #header .nav-list ul a {
   font-size: 2.5rem;
   font-weight: 500;
